improves file names. document() and install()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,21 +4,31 @@ export(allocate_reservoir_to_river)
 export(riv2graph)
 export(riv2nodes)
 export(river_upstream)
+export(route_reservoir_along_river)
+export(route_reservoir_to_river)
 export(select_disjoint_river)
 export(split_river_network)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,slice)
+importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
 importFrom(igraph,components)
+importFrom(igraph,degree)
 importFrom(igraph,graph.adjlist)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
+importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
+importFrom(sf,st_distance)
 importFrom(sf,st_geometry_type)
+importFrom(sf,st_intersection)
 importFrom(sf,st_line_sample)
 importFrom(sf,st_linestring)
 importFrom(sf,st_nearest_feature)
+importFrom(sf,st_sf)
 importFrom(sf,st_touches)
+importFrom(sf,st_write)
