--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(allocate_reservoir_to_river)
 export(build_reservoir_topology)
+export(graph_reverse_direction)
 export(riv2graph)
 export(riv2nodes)
 export(river_upstream)
 export(select_disjoint_river)
 export(sort_non_strategic)
 export(split_river_network)
+export(water_balance)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -27,7 +29,9 @@ importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
 importFrom(igraph,components)
 importFrom(igraph,degree)
+importFrom(igraph,get.data.frame)
 importFrom(igraph,graph.adjlist)
+importFrom(igraph,is.directed)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(sf,st_cast)
