creates topology for river and improves performance (map and parallelization) on reservoir topology

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(allocate_reservoir_to_river)
 export(build_reservoir_topology)
+export(catch2graph)
 export(graph_reverse_direction)
 export(riv2graph)
 export(riv2nodes)
@@ -12,6 +13,7 @@ export(split_river_network)
 export(water_balance)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,distinct)
@@ -21,10 +23,12 @@ importFrom(dplyr,group_split)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(dplyr,tibble)
 importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
 importFrom(igraph,components)
@@ -34,12 +38,22 @@ importFrom(igraph,graph.adjlist)
 importFrom(igraph,is.directed)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
+importFrom(magrittr,`%>%`)
+importFrom(progress,progress_bar)
+importFrom(purrr,map_dfr)
+importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
+importFrom(sf,st_dimension)
+importFrom(sf,st_distance)
+importFrom(sf,st_filter)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_intersects)
 importFrom(sf,st_line_sample)
 importFrom(sf,st_linestring)
 importFrom(sf,st_nearest_feature)
+importFrom(sf,st_point)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_touches)
+importFrom(tidygraph,activate)
+importFrom(tidygraph,as_tbl_graph)
