--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,tibble)
+importFrom(furrr,future_map)
 importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
 importFrom(igraph,components)
@@ -40,7 +41,7 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,`%>%`)
 importFrom(progress,progress_bar)
-importFrom(purrr,map_dfr)
+importFrom(purrr,map)
 importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
 importFrom(sf,st_dimension)
