--- a/a5udes.yml
+++ b/a5udes.yml
@@ -31,6 +31,7 @@ dependencies:
   - gfortran_linux-64=7.5.0=h09487f9_20
   - giflib=5.2.1=h516909a_2
   - glib=2.65.0=h6f030ca_0
+  - gmp=6.2.0=he1b5a44_2
   - graphite2=1.3.13=he1b5a44_1001
   - gsl=2.6=h294904e_0
   - gxx_impl_linux-64=7.5.0=hdf63c60_6
@@ -139,6 +140,7 @@ dependencies:
   - r-htmltools=0.5.0=r40h0357c0b_0
   - r-htmlwidgets=1.5.1=r40h6115d3f_1
   - r-httr=1.4.2=r40h6115d3f_0
+  - r-igraph=1.2.5=r40hd626d4e_1
   - r-ini=0.3.1=r40h6115d3f_1003
   - r-isoband=0.2.2=r40h0357c0b_0
   - r-jsonlite=1.7.0=r40hcdcec82_0
@@ -202,6 +204,7 @@ dependencies:
   - r-sys=3.4=r40hcdcec82_0
   - r-testthat=2.3.2=r40h0357c0b_1
   - r-tibble=3.0.3=r40hcdcec82_0
+  - r-tidygraph=1.2.0=r40h0357c0b_0
   - r-tidyr=1.1.0=r40h0357c0b_0
   - r-tidyselect=1.1.0=r40h6115d3f_0
   - r-tidyverse=1.3.0=r40h6115d3f_2
