--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(riv2nodes)
 export(river_upstream)
 export(select_disjoint_river)
 export(sort_non_strategic)
+export(sort_reservoirs)
 export(split_river_network)
 export(water_balance)
 importFrom(dplyr,"%>%")
