--- a/a5udes.yml
+++ b/a5udes.yml
@@ -164,6 +164,7 @@ dependencies:
   - r-munsell=0.5.0=r40h6115d3f_1003
   - r-nlme=3.1_148=r40h9bbef5b_0
   - r-openssl=1.4.2=r40he5c4762_0
+  - r-osmdata=0.1.3=r40h0357c0b_1
   - r-pillar=1.4.6=r40h6115d3f_0
   - r-pkgbuild=1.1.0=r40h6115d3f_0
   - r-pkgconfig=2.0.3=r40h6115d3f_1
@@ -199,6 +200,7 @@ dependencies:
   - r-selectr=0.4_2=r40h6115d3f_1
   - r-sessioninfo=1.1.1=r40h6115d3f_1002
   - r-sf=0.9_5=r40h0fc35ea_2
+  - r-sp=1.4_2=r40hcdcec82_0
   - r-stringi=1.4.6=r40h604b29c_3
   - r-stringr=1.4.0=r40h6115d3f_2
   - r-sys=3.4=r40hcdcec82_0
