--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(allocate_reservoir_to_river)
 export(build_reservoir_topology)
 export(catch2graph)
 export(graph_reverse_direction)
+export(outlet_in_condem)
 export(riv2graph)
 export(riv2nodes)
 export(river_upstream)
@@ -14,6 +15,7 @@ export(split_river_network)
 export(water_balance)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,coalesce)
@@ -31,6 +33,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,tibble)
 importFrom(furrr,future_map)
+importFrom(gdalUtils,gdalwarp)
 importFrom(igraph,V)
 importFrom(igraph,all_simple_paths)
 importFrom(igraph,components)
@@ -43,6 +46,10 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,`%>%`)
 importFrom(progress,progress_bar)
 importFrom(purrr,map)
+importFrom(raster,as.data.frame)
+importFrom(raster,crop)
+importFrom(raster,raster)
+importFrom(raster,writeRaster)
 importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
 importFrom(sf,st_dimension)
@@ -57,5 +64,8 @@ importFrom(sf,st_point)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_touches)
+importFrom(sf,st_write)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
+importFrom(tidygraph,node_is_sink)
+importFrom(tidygraph,tbl_graph)
