employing hydorlogically conditioned DEM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,13 @@
 export(allocate_reservoir_to_river)
 export(build_reservoir_topology)
 export(catch2graph)
+export(flow_graph_in_polygon)
 export(graph_reverse_direction)
-export(outlet_in_condem)
 export(riv2graph)
 export(riv2nodes)
 export(river_upstream)
 export(select_disjoint_river)
+export(sink_from_graph)
 export(sort_non_strategic)
 export(sort_reservoirs)
 export(split_river_network)
@@ -67,5 +68,7 @@ importFrom(sf,st_touches)
 importFrom(sf,st_write)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
+importFrom(tidygraph,mutate)
 importFrom(tidygraph,node_is_sink)
+importFrom(tidygraph,node_topo_order)
 importFrom(tidygraph,tbl_graph)
